// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TableRenderer /> > renders a 1x3 table 1`] = `
"
┌──────────┬──────────┬──────────┐
│ Column 1 │ Column 2 │ Column 3 │
└──────────┴──────────┴──────────┘
"
`;

exports[`<TableRenderer /> > renders a 3x1 table 1`] = `
"
┌──────────┐
│ Column 1 │
├──────────┤
│ 1        │
│ A        │
└──────────┘
"
`;

exports[`<TableRenderer /> > renders a 3x3 table 1`] = `
"
┌──────────┬────────────────────────┬──────────┐
│ Column 1 │ Column 2               │ Column 3 │
├──────────┼────────────────────────┼──────────┤
│ 1        │ 2                      │ 3        │
│ A        │ Longer than the header │ C        │
└──────────┴────────────────────────┴──────────┘
"
`;

exports[`<TableRenderer /> > renders inline Markdown 1`] = `
"
┌──────────┬──────────┬──────────┐
│ Column 1 │ Column 2 │ Column 3 │
├──────────┼──────────┼──────────┤
│ 1        │ 2        │ 3        │
└──────────┴──────────┴──────────┘
"
`;

exports[`<TableRenderer /> > wraps overflowing headers 1`] = `
"
┌──────────┬──────────┬─────────────────────────────────────────────┬──────────┐
│ Column 1 │ Column 2 │ This is a very long column header that      │ Column 4 │
│          │          │ should trigger overflow.                    │          │
├──────────┼──────────┼─────────────────────────────────────────────┼──────────┤
│ 1        │ 2        │ 3                                           │ 4        │
│ A        │ B        │ C                                           │ D        │
└──────────┴──────────┴─────────────────────────────────────────────┴──────────┘
"
`;

exports[`<TableRenderer /> > wraps overflowing table cells 1`] = `
"
┌──────────┬─────────────────────────────────────────────┬──────────┬──────────┐
│ Column 1 │ Column 2                                    │ Column 3 │ Column 4 │
├──────────┼─────────────────────────────────────────────┼──────────┼──────────┤
│ 1        │ This is a very long table cell that should  │ 3        │ 4        │
│          │ trigger overflow.                           │          │          │
├──────────┼─────────────────────────────────────────────┼──────────┼──────────┤
│ A        │ B                                           │ C        │ D        │
└──────────┴─────────────────────────────────────────────┴──────────┴──────────┘
"
`;
